<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="translator">builtin</string>
    <string name="_title_morning">Morning</string>
    <string name="_title_noon">Noon</string>
    <string name="_title_evening">Evening</string>
    <string name="_title_night">Night</string>
    <string name="_title_begin">Begin</string>
    <string name="_title_end">End</string>
    <string name="_msg_new_notification">New notification</string>
    <plurals name="_qmsg_missed">
        <item quantity="other">%1$d missed</item>
    </plurals>
    <plurals name="_qmsg_due">
        <item quantity="other">%1$d due</item>
    </plurals>
	<plurals name="_qmsg_supply_multiple">
        <item quantity="one">%2$s and %3$s</item>
        <item quantity="other">%2$s and %1$d others</item>       
    </plurals>
	<plurals name="_qmsg_low">
		<item quantity="other">%1$d low</item>
	</plurals>
	<plurals name="_qmsg_expiring">
		<item quantity="other">%1$d expiring</item>
	</plurals>
	<string name="_msg_constraints_ab">Select time between %1$s and %2$s</string>
	<string name="_msg_constraints_a">Select time after %1$s</string>
	<string name="_msg_constraints_b">Select time before %2$s</string>
	<string name="_btn_set">Set</string>
    <string name="_title_drug_name">Drug name</string>
    <string name="_title_delete">Delete</string>
    <string name="_msg_freq_daily">Daily</string>
	<string name="_toast_deleted">Deleted.</string>
    <string name="_title_error">Error</string>
	<string name="_msg_timepreference_constraint_failed">Time is not within specified bounds</string>
	<string name="_msg_err_empty_drug_name">This drug has no name and will be discarded</string>
	<string name="_msg_err_non_unique_drug_name">This name is already taken</string>
	<string name="_title_warning">Warning</string>
    <string name="_title_preferences">Preferences</string>
    <string name="_title_prefscreen_times">Times</string>
    <string name="_summary_prefscreen_times">Definitions of morning, noon, etc.</string>
    <string name="_title_prefscreen_notifications">Notifications</string>
    <string name="_summary_prefscreen_notifications">Notification methods, snooze time, etc.</string>
    <string name="_title_pref_notification_methods">Customizations</string>
    <string name="_title_min_supply_days">Refill reminder</string>
    <string name="_summary_min_supply_days">Minimum number of days of a drug\'s supply before displaying a notification – currently %1$s</string>
    <string name="_title_pref_use_led">LED</string>
    <string name="_title_pref_use_sound">Sound</string>
    <string name="_title_pref_use_vibrator">Vibration</string>
    <string name="_title_prefscreen_display">Appearance</string>
    <string name="_summary_prefscreen_display"></string>
    <string name="_title_pref_restore_defaults">Restore defaults</string>
	<string name="_title_prefscreen_display_info">Note</string>
	<string name="_summary_prefscreen_display_info">These settings may be overridden temporarily using MENU -&gt; Show all</string>
	<string name="_btn_discard">Discard</string>
	<string name="_btn_save">Save</string>
	<string name="_toast_intake_noted">Noted.</string>
	<string name="_toast_saved">Saved.</string>
	<string name="_title_add">Add</string>
	<string name="_msg_intake_normal">Take this dose of &lt;b&gt;%1$s&lt;/b&gt;</string>
	<string name="_msg_intake_unscheduled">Specify a dose of &lt;b&gt;%1$s&lt;/b&gt;</string>
	<string name="_title_change_dose">Change dose</string>
	<string name="_title_edit_drug">Edit drug</string>
	<string name="_title_mark_not_taken">Remove taken dose</string>
	<string name="_title_mark_taken">Take dose</string>
	<string name="_msg_freq_every_n_days">Every %1$s days, beginning on %2$s</string>
	<string name="_msg_freq_21days_on_7days_off">21 days beginning on %1$s, followed by a 7 day pause</string>
	<string name="_summary_intake_never">Never</string>
	<string name="_msg_drug_repeat_ge_2">Must be greater than or equal to 2</string>
	<string name="_title_version">Version</string>
	<string name="_summary_not_available">N/A</string>
	<string name="_title_tablet">Tablet</string>
	<string name="_title_capsule">Capsule</string>
	<string name="_title_inhaler">Inhaler</string>
	<string name="_title_injection">Syringe</string>
	<string name="_title_spray">Spray</string>
	<string name="_title_drop">Glass</string>
	<string name="_title_gel">Squeeze tube</string>
	<string name="_title_ring">Ring</string>
	<string name="_title_other">Other</string>
	<string name="_title_ampoule">Ampoule</string>
	<string name="_title_iv_bag">IV bag</string>
	<string name="_title_pipette">Eye dropper</string>
	<string name="_title_daily">Daily</string>
	<string name="_title_every_n_days">Every N days</string>
	<string name="_title_pick_days">Pick days</string>
	<string name="_title_21_days_on_7_days_off">7 day pause every 21 days</string>
	<string name="_msg_supply">%1$s – lasts until %2$s</string>
	<string name="_title_save_chanes">Save changes</string>
	<string name="_msg_save_drug_changes">Do you want to save changes made to this drug?</string>
	<string name="_msg_every_n_days_distance">Days between each repetition</string>
	<string name="_title_intake_schedule">Schedule</string>
	<string name="_title_repeat">Repetition</string>
	<string name="_title_misc">Miscellaneous</string>
	<string name="_title_icon">Icon</string>
	<string name="_title_current_supply">Current supply</string>
	<string name="_title_refill_size">Refill size</string>
	<string name="_title_active">Active</string>
	<string name="_title_ignore_dose">Skip dose</string>
    <string name="_msg_touch_to_edit">(touch to edit)</string>
    <string name="_msg_no_doses_on_this_day">There are no doses scheduled on this date</string>
    <string name="_msg_db_error_general">Unknown database error.</string>
	<string name="_msg_db_error_upgrade">Database upgrade error.</string>
	<string name="_msg_db_error_downgrade">Incompatible database version.</string>
	<string name="_msg_db_error_footer">Click \"[@string/_btn_reset]\" to reset the database.</string>
	<string name="_btn_reset">Reset</string>
	<string name="_msg_footer_insufficient_supplies">
    <![CDATA[
        Insufficient supplies for this dose. Press \"[@android:string/ok]\" to ignore, \"[@android:string/cancel]\" to edit the dose,
        or touch this text to edit <b>%1$s</b>.
    ]]>
    </string>
	<string name="_title_weekdays">Weekdays</string>
	<string name="_title_on_demand">As needed</string>
	<string name="_title_delete_item">Really delete %1$s?</string>
	<string name="_msg_delete_drug">This cannot be undone!</string>
	<string name="_toast_db_reset_success">Successfully reset database.</string>
	<string name="_toast_db_reset_failure">Database reset failed. Please reinstall.</string>
	<string name="_btn_exit">Exit</string>
	<string name="_toast_drug_notification_icon">This drug has at least one missed dose in the past.</string>
    <string name="_title_notification_doses">Doses</string>
	<string name="_title_notification_low_supplies">Low supplies</string>
	<string name="_btn_next">Next</string>
	<string name="_btn_back">Back</string>
	<string name="_title_scramble_names">Scramble names</string>
	<string name="_summary_scramble_names">Scrambles the names of your drugs. To reveal the real name, click on it.</string>
	<string name="_title_select_date">Select date</string>
	<string name="_title_repetition_origin">Starting date</string>
	<string name="_title_history_age">History size</string>
	<string name="_summary_history_age">Data older than the specified amount of time will be deleted</string>
	<string name="_title_history_1_month">One Month</string>
	<string name="_title_history_2_months">Two Months</string>
	<string name="_title_history_6_months">Six months</string>
	<string name="_title_history_1_year">One year</string>
	<string name="_title_history_unlimited">Unlimited</string>
	<string name="_title_database">Database</string>
	<string name="_toast_large_history_size">Warning: this setting might cause very long loading times!</string>
	<string name="_title_supply_monitor">Mark as taken</string>
	<string name="_summary_supply_monitor">Doses are automatically marked as taken. Notifications will only be
		displayed if supplies are low.
	</string>
	<string name="_title_go_to_date">Go to date</string>
	<string name="_title_today">Today</string>
	<string name="_title_restore_default_settings">@string/_msg_restore_default_settings</string>
	<string name="_msg_restore_default_settings">This will reset all settings to their default values</string>
	<string name="_title_show_supply_monitors">Show all</string>
	<string name="_summary_show_supply_monitors">Display drugs with disabled dose notifications</string>
	<string name="_title_show_in_list">Drug list</string>
	<string name="_title_help">Help</string>
	<string name="_title_n_of_n">%1$d of %2$d</string>
	<string name="_title_dark_theme">Use dark theme</string>
	<string name="_toast_theme_changed">Restarting app…</string>
	<string name="_toast_low_supplies">Lasts until %1$s.</string>
	<string name="_title_notification_sound">Sound</string>
	<string name="_title_doses_and_low_supplies">All</string>
	<string name="_title_low_supplies_only">Refill only</string>
	<string name="_title_about">About</string>
	<string name="_title_licenses">Licenses</string>
	<string name="_title_db_status_loading">Loading…</string>
	<string name="_title_db_status_upgrading">Upgrading…</string>
	<string name="_title_db_status_discarding_intakes">Discarding old data…</string>
	<string name="_title_db_status_creating_intakes">Inserting missing data…</string>
	<string name="_title_db_status_initializing">Initializing…</string>
	<string name="_summary_enable_landscape_mode">Enables landscape mode (experimental)</string>
	<string name="_title_enable_landscape_mode">Landscape mode</string>
	<string name="_msg_repetition_origin">Choose starting date</string>
	<string name="_title_filter">Filter</string>
	<string name="_title_show_all">Show all</string>
	<string name="_title_donate">Donate!</string>
	<string name="_title_factory_reset">Factory reset</string>
	<string name="_title_dont_repeat">Don\'t repeat</string>
	<string name="_title_15_minutes">15 minutes</string>
	<string name="_title_30_minutes">30 minutes</string>
	<string name="_title_1_hour">1 hour</string>
	<string name="_title_2_hour">2 hours</string>
	<string name="_title_repeat_alarm">Repeat</string>
	<string name="_summary_repeat_alarm">Repeat notifications after a certain amount of time</string>
	<string name="_help_dose_times">You\'ve started RxDroid for the first time. Please define the following
		four time intervals, which you will use later when specifying a dosing schedule.</string>
	<string name="_title_info">Information</string>
	<string name="_toast_past_max_history_age">This date is beyond the selected history size limit.</string>
	<string name="_title_new_drug">New drug</string>
	<string name="_title_db_stats">Statistics</string>
	<string name="_msg_db_stats">Database was loaded in %1$s. You may be able to reduce 
		this time by reducing the history size.</string>
	<string name="_title_compact_action_bar">Compact action bar</string>
	<string name="_summary_compact_action_bar">Show less icons in the action bar</string>
	<string name="_title_website">Website</string>
	<string name="_title_per_drug_reminders">Reminders</string>
	<string name="_title_me">Me</string>
	<string name="_title_patient">Patient</string>
	<string name="_title_take_all_doses">Take all</string>
    <string name="_btn_report">Report</string>
    <string name="_btn_continue">Continue</string>
    <string name="_title_backup_restore">Backup/Restore</string>
	<string name="_msg_set_backup_pw">
		Please specify a backup password to protect your privacy.
	</string>
	<string name="_title_backup_pw">Backup password</string>
	<string name="_title_repeat_pw">Repeat password</string>
</resources>