<?xml version="1.0" encoding="utf-8"?>
<!--
/**
 * RxDroid - A Medication Reminder
 * Copyright (C) 2011-2013 Joseph Lehner <joseph.c.lehner@gmail.com>
 *
 *
 * RxDroid is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version. Additional terms apply (see LICENSE).
 *
 * RxDroid is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with RxDroid.  If not, see <http://www.gnu.org/licenses/>.
 *
 *
 */
-->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto">

		<item android:id="@+id/menuitem_add"
		android:title="@string/_title_add"
		android:icon="@drawable/ic_action_add_box_white"
		app:showAsAction="never"
	/>
		
	<item android:id="@+id/menuitem_patient"
		android:title="@string/_title_patient"
		android:icon="@null"
			app:showAsAction="always"
		android:visible="false"
	/>
	
	<item android:id="@+id/menuitem_take_all"
	    android:title="@string/_title_take_all_doses"
	    android:icon="@drawable/ic_action_tick_white"
			app:showAsAction="always"
	/>
		
	<item android:id="@+id/menuitem_date"
		android:title="@string/_title_select_date"
		android:icon="@drawable/ic_action_date_white"
			app:showAsAction="always"
	/>
	
	<item android:id="@+id/menuitem_preferences"
		android:title="@string/_title_preferences"
		android:icon="@null"
			app:showAsAction="never"
	/>
	
	<item android:id="@+id/menuitem_toggle_filtering"
		android:title="@string/_title_show_all"
		android:icon="@null"
			app:showAsAction="never"
	/>

	<!--
	<item android:id="@+id/menuitem_help"
		android:title="@string/_title_help"
		android:icon="@null"
		    app:showAsAction="never"
	/>
	-->
</menu>
