<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
>
    <TextView android:id="@+id/warning_title"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:paddingTop="8dip"
            android:paddingBottom="8dip"

            android:gravity="center"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:text="@string/_title_warning"
            android:textColor="#f00"

            style="@android:style/TextAppearance.Large"
    />

    <at.jclehner.rxdroid.widget.HtmlTextView android:id="@+id/warning_text"
              android:layout_height="0dip"
              android:layout_width="match_parent"
              android:layout_weight="1"
              android:padding="8dip"
              android:text="@string/_msg_not_started_on_boot"
    />

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
    >
        <Button android:id="@+id/btn_report"
                android:layout_height="match_parent"
                android:layout_width="0dip"
                android:layout_weight="1"
                android:text="@string/_btn_report"
        />

        <Button android:id="@+id/btn_continue"
                android:layout_height="match_parent"
                android:layout_width="0dip"
                android:layout_weight="1"
                android:text="@string/_btn_continue"
        />

    </LinearLayout>

</LinearLayout>